<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="9">

    <Button
        style="@style/Button1"
        android:id="@+id/btnFirst"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/first" />

    <Button
        android:id="@+id/btnPrev"
        style="@style/Button1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/prev" />

    <Button
        android:id="@+id/btnCurr1"
        style="@style/Button2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="1" />

    <Button
        android:id="@+id/btnCurr2"
        style="@style/Button2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="2" />

    <Button
        android:id="@+id/btn..."
        style="@style/Button1"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:text="..." />

    <Button
        android:id="@+id/btnEnd"
        style="@style/Button2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="12" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Button1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/next" />

    <Button
        android:id="@+id/btnLast"
        style="@style/Button1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/last" />


</LinearLayout>